Additional robustness for unexpected registry states
Return friendly 404 messages if services or instances are not registered.
Allow repository and resource-scoped exposed services to have the same
exposedAt value, excepting forward slash